--- a/spec/fixtures/vcr_cassettes/client_new_cap_types.yml
+++ b/spec/fixtures/vcr_cassettes/client_new_cap_types.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://ad2games-partners.com/api/1/get.asmx?WSDL
+    uri: https://ad2games-partners.com/api/1/get.asmx?WSDL
     body:
       encoding: UTF-8
       string: ''
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 02 Apr 2014 13:12:26 GMT
+      - Wed, 02 Apr 2014 14:54:52 GMT
   response:
     status:
       code: 200
@@ -29,9 +29,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 02 Apr 2014 13:12:26 GMT
+      - Wed, 02 Apr 2014 14:54:52 GMT
       Content-Length:
-      - '87381'
+      - '87385'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\" encoding=\"utf-8\"?>\r\n<wsdl:definitions xmlns:soap=\"http://schemas.xmlsoap.org/wsdl/soap/\"
@@ -1132,19 +1132,19 @@ http_interactions:
         />\r\n      </wsdl:input>\r\n      <wsdl:output>\r\n        <mime:mimeXml
         part=\"Body\" />\r\n      </wsdl:output>\r\n    </wsdl:operation>\r\n  </wsdl:binding>\r\n
         \ <wsdl:service name=\"get\">\r\n    <wsdl:port name=\"getSoap\" binding=\"tns:getSoap\">\r\n
-        \     <soap:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <soap:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getSoap12\" binding=\"tns:getSoap12\">\r\n
-        \     <soap12:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <soap12:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getHttpGet\" binding=\"tns:getHttpGet\">\r\n
-        \     <http:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <http:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getHttpPost\" binding=\"tns:getHttpPost\">\r\n
-        \     <http:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <http:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n  </wsdl:service>\r\n</wsdl:definitions>"
     http_version: 
-  recorded_at: Wed, 02 Apr 2014 13:12:26 GMT
+  recorded_at: Wed, 02 Apr 2014 14:54:53 GMT
 - request:
     method: post
-    uri: http://ad2games-partners.com/api/1/get.asmx
+    uri: https://ad2games-partners.com/api/1/get.asmx
     body:
       encoding: UTF-8
       string: |
@@ -1163,7 +1163,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 02 Apr 2014 13:12:26 GMT
+      - Wed, 02 Apr 2014 14:54:53 GMT
       Soapaction:
       - '"http://cakemarketing.com/api/1/CapTypes"'
       Content-Type:
@@ -1184,7 +1184,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 02 Apr 2014 13:12:26 GMT
+      - Wed, 02 Apr 2014 14:54:53 GMT
       Content-Length:
       - '703'
     body:
@@ -1195,5 +1195,5 @@ http_interactions:
         xmlns="API:id_name_store">1</cap_type_id><cap_type_name xmlns="API:id_name_store">Click</cap_type_name></cap_type><cap_type><cap_type_id
         xmlns="API:id_name_store">2</cap_type_id><cap_type_name xmlns="API:id_name_store">Conversion</cap_type_name></cap_type></cap_types></CapTypesResult></CapTypesResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Wed, 02 Apr 2014 13:12:27 GMT
+  recorded_at: Wed, 02 Apr 2014 14:54:53 GMT
 recorded_with: VCR 2.9.0
