--- a/spec/fixtures/vcr_cassettes/client_new_with_username_and_password.yml
+++ b/spec/fixtures/vcr_cassettes/client_new_with_username_and_password.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://ad2games-partners.com/api/1/get.asmx?WSDL
+    uri: https://ad2games-partners.com/api/1/get.asmx?WSDL
     body:
       encoding: UTF-8
       string: ''
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 02 Apr 2014 12:18:28 GMT
+      - Wed, 02 Apr 2014 15:15:39 GMT
   response:
     status:
       code: 200
@@ -29,9 +29,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 02 Apr 2014 12:18:27 GMT
+      - Wed, 02 Apr 2014 15:15:40 GMT
       Content-Length:
-      - '87381'
+      - '87385'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\" encoding=\"utf-8\"?>\r\n<wsdl:definitions xmlns:soap=\"http://schemas.xmlsoap.org/wsdl/soap/\"
@@ -1132,19 +1132,19 @@ http_interactions:
         />\r\n      </wsdl:input>\r\n      <wsdl:output>\r\n        <mime:mimeXml
         part=\"Body\" />\r\n      </wsdl:output>\r\n    </wsdl:operation>\r\n  </wsdl:binding>\r\n
         \ <wsdl:service name=\"get\">\r\n    <wsdl:port name=\"getSoap\" binding=\"tns:getSoap\">\r\n
-        \     <soap:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <soap:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getSoap12\" binding=\"tns:getSoap12\">\r\n
-        \     <soap12:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <soap12:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getHttpGet\" binding=\"tns:getHttpGet\">\r\n
-        \     <http:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <http:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n    <wsdl:port name=\"getHttpPost\" binding=\"tns:getHttpPost\">\r\n
-        \     <http:address location=\"http://ad2games-partners.com/api/1/get.asmx\"
+        \     <http:address location=\"https://ad2games-partners.com/api/1/get.asmx\"
         />\r\n    </wsdl:port>\r\n  </wsdl:service>\r\n</wsdl:definitions>"
     http_version: 
-  recorded_at: Wed, 02 Apr 2014 12:18:28 GMT
+  recorded_at: Wed, 02 Apr 2014 15:15:41 GMT
 - request:
     method: post
-    uri: http://ad2games-partners.com/api/1/get.asmx
+    uri: https://ad2games-partners.com/api/1/get.asmx
     body:
       encoding: UTF-8
       string: |
@@ -1164,7 +1164,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Wed, 02 Apr 2014 12:18:28 GMT
+      - Wed, 02 Apr 2014 15:15:41 GMT
       Soapaction:
       - '"http://cakemarketing.com/api/1/GetAPIKey"'
       Content-Type:
@@ -1185,14 +1185,14 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 02 Apr 2014 12:18:28 GMT
+      - Wed, 02 Apr 2014 15:15:40 GMT
       Content-Length:
-      - '388'
+      - '342'
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><GetAPIKeyResponse
         xmlns="http://cakemarketing.com/api/1/"><GetAPIKeyResult>api-key</GetAPIKeyResult></GetAPIKeyResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Wed, 02 Apr 2014 12:18:28 GMT
+  recorded_at: Wed, 02 Apr 2014 15:15:41 GMT
 recorded_with: VCR 2.9.0
