Support /affiliate (and other) APIs

--- a/api_versions.yml
+++ b/api_versions.yml
@@ -59,6 +59,7 @@
 :reports:
   :advertiser_summary: 2
   :affiliate_summary: 2
+  :bills: 3
   :campaign_summary: 2
   :creative_summary: 2
   :caps: 3
