--- a/api_versions.yml
+++ b/api_versions.yml
@@ -1,5 +1,9 @@
 ---
 :admin:
+  :accounting:
+    :mark_affiliate_bill_as_received: 1
+    :export_advertiser_bills: 1
+    :export_affiliate_bills: 1
   :add:
     :advertiser_credit: 1
     :creative: 1
