--- a/spec/fixtures/vcr_cassettes/Integration_test/returns_a_clicks_report_with_a_defined_time_range.yml
+++ b/spec/fixtures/vcr_cassettes/Integration_test/returns_a_clicks_report_with_a_defined_time_range.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://cake-partner-domain.com//api/7/reports.asmx
+    uri: https://cake-partner-domain.com/api/7/reports.asmx
     body:
       encoding: UTF-8
       string: |
@@ -37,7 +37,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 12 Feb 2015 12:17:12 GMT
+      - Fri, 13 Feb 2015 14:29:42 GMT
       Content-Length:
       - '2151'
     body:
@@ -61,5 +61,5 @@ http_interactions:
         xmlns="API:id_name_store">Amazon.Com Inc.</isp_name></isp><disposition>Base
         Tracking Domain Redirect</disposition><total_clicks>1</total_clicks></click></clicks></ClicksResult></ClicksResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Thu, 12 Feb 2015 12:17:18 GMT
+  recorded_at: Fri, 13 Feb 2015 14:29:53 GMT
 recorded_with: VCR 2.9.3
