--- a/spec/fixtures/vcr_cassettes/ADDEDIT_integration_test/offers/creates_an_offer.yml
+++ b/spec/fixtures/vcr_cassettes/ADDEDIT_integration_test/offers/creates_an_offer.yml
@@ -40,7 +40,7 @@ http_interactions:
               <cake:received>2.0</cake:received>
               <cake:received_percentage>off</cake:received_percentage>
               <cake:payout>1.5</cake:payout>
-              <cake:tags/>
+              <cake:tags>some, tags</cake:tags>
               <cake:offer_name>Test Offer</cake:offer_name>
               <cake:offer_description>TEST1</cake:offer_description>
               <cake:restrictions>TEST2</cake:restrictions>
@@ -82,7 +82,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 17 Feb 2015 13:18:40 GMT
+      - Fri, 06 Mar 2015 13:46:57 GMT
       Content-Length:
       - '562'
     body:
@@ -90,7 +90,7 @@ http_interactions:
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><OfferResponse
         xmlns="http://cakemarketing.com/api/4/"><OfferResult><success>true</success><message>Offer
-        8910 Created</message><success_info><offer_id>8910</offer_id><offer_contract_id>1455</offer_contract_id><campaign_id>13301</campaign_id><creative_id>9431</creative_id></success_info></OfferResult></OfferResponse></soap:Body></soap:Envelope>
+        9098 Created</message><success_info><offer_id>9098</offer_id><offer_contract_id>2018</offer_contract_id><campaign_id>13866</campaign_id><creative_id>9619</creative_id></success_info></OfferResult></OfferResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Tue, 17 Feb 2015 13:18:43 GMT
+  recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
 recorded_with: VCR 2.9.3
