--- a/spec/fixtures/vcr_cassettes/ADDEDIT_integration_test/geo_targeting/creates_geo_targetings.yml
+++ b/spec/fixtures/vcr_cassettes/ADDEDIT_integration_test/geo_targeting/creates_geo_targetings.yml
@@ -2,20 +2,22 @@
 http_interactions:
 - request:
     method: post
-    uri: https://cake-partner-domain.com/api/1/addedit.asmx
+    uri: https://cake-partner-domain.com/api/2/addedit.asmx
     body:
       encoding: UTF-8
       string: |
         <?xml version="1.0"?>
-        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/1/">
+        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/2/">
           <env:Header/>
           <env:Body>
             <cake:GeoTargets>
               <cake:api_key>cake-api-key</cake:api_key>
               <cake:offer_contract_id>1456</cake:offer_contract_id>
               <cake:countries>DE,FR</cake:countries>
-              <cake:set_targeting_to_geo>true</cake:set_targeting_to_geo>
+              <cake:allow_countries>true</cake:allow_countries>
+              <cake:redirect_offer_contract_ids>0,0</cake:redirect_offer_contract_ids>
               <cake:add_edit_option>add</cake:add_edit_option>
+              <cake:set_targeting_to_geo>true</cake:set_targeting_to_geo>
             </cake:GeoTargets>
           </env:Body>
         </env:Envelope>
@@ -38,15 +40,66 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 Mar 2015 07:44:47 GMT
+      - Tue, 17 Mar 2015 10:22:54 GMT
       Content-Length:
-      - '443'
+      - '446'
     body:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><GeoTargetsResponse
-        xmlns="http://cakemarketing.com/api/1/"><GeoTargetsResult><success>true</success><message>Countries
-        Added</message><row_count>0</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
+        xmlns="http://cakemarketing.com/api/2/"><GeoTargetsResult><success>true</success><message>Geotarget(s)
+        Added</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
+    http_version: 
+  recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
+- request:
+    method: post
+    uri: https://cake-partner-domain.com/api/2/addedit.asmx
+    body:
+      encoding: UTF-8
+      string: |
+        <?xml version="1.0"?>
+        <env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope" xmlns:cake="http://cakemarketing.com/api/2/">
+          <env:Header/>
+          <env:Body>
+            <cake:GeoTargets>
+              <cake:api_key>cake-api-key</cake:api_key>
+              <cake:offer_contract_id>1456</cake:offer_contract_id>
+              <cake:countries>AT,CH</cake:countries>
+              <cake:allow_countries>false</cake:allow_countries>
+              <cake:redirect_offer_contract_ids>1392,1392</cake:redirect_offer_contract_ids>
+              <cake:add_edit_option>add</cake:add_edit_option>
+              <cake:set_targeting_to_geo>true</cake:set_targeting_to_geo>
+            </cake:GeoTargets>
+          </env:Body>
+        </env:Envelope>
+    headers:
+      Content-Type:
+      - application/soap+xml;charset=UTF-8
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private, max-age=0
+      Content-Type:
+      - application/soap+xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/8.0
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 17 Mar 2015 10:22:55 GMT
+      Content-Length:
+      - '446'
+    body:
+      encoding: UTF-8
+      string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://www.w3.org/2003/05/soap-envelope"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><GeoTargetsResponse
+        xmlns="http://cakemarketing.com/api/2/"><GeoTargetsResult><success>true</success><message>Geotarget(s)
+        Added</message><row_count>2</row_count></GeoTargetsResult></GeoTargetsResponse></soap:Body></soap:Envelope>
     http_version: 
   recorded_at: Tue, 17 Feb 2015 12:00:00 GMT
 recorded_with: VCR 2.9.3
