Default to no-change values on campaign updates

--- a/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/edits_a_campaign.yml
+++ b/spec/fixtures/vcr_cassettes/SoapyCake_AdminAddedit/campaigns/edits_a_campaign.yml
@@ -14,12 +14,19 @@ http_interactions:
               <cake:api_key>cake-api-key</cake:api_key>
               <cake:display_link_type_id>1</cake:display_link_type_id>
               <cake:expiration_date>2045-02-09T01:00:00</cake:expiration_date>
+              <cake:media_type_id>1</cake:media_type_id>
+              <cake:postback_delay_ms>-1</cake:postback_delay_ms>
+              <cake:review>no_change</cake:review>
+              <cake:redirect_404>no_change</cake:redirect_404>
+              <cake:auto_disposition_delay_hours>0</cake:auto_disposition_delay_hours>
+              <cake:paid_upsells>no_change</cake:paid_upsells>
+              <cake:clear_session_on_conversion>no_change</cake:clear_session_on_conversion>
+              <cake:account_status_id>1</cake:account_status_id>
               <cake:campaign_id>123</cake:campaign_id>
               <cake:affiliate_id>1</cake:affiliate_id>
               <cake:offer_id>8910</cake:offer_id>
-              <cake:media_type_id>1</cake:media_type_id>
-              <cake:account_status_id>1</cake:account_status_id>
               <cake:payout>1.23</cake:payout>
+              <cake:payout_update_option>change</cake:payout_update_option>
             </cake:Campaign>
           </env:Body>
         </env:Envelope>
@@ -36,13 +43,13 @@ http_interactions:
       Content-Type:
       - application/soap+xml; charset=utf-8
       Server:
-      - Microsoft-IIS/8.0
+      - Microsoft-IIS/8.5
       X-Aspnet-Version:
       - 4.0.30319
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 15 Jun 2015 12:27:13 GMT
+      - Tue, 26 Apr 2016 15:07:44 GMT
       Content-Length:
       - '626'
     body:
